Schedule and CoC tweaks

--- a/source/information.html.erb
+++ b/source/information.html.erb
@@ -34,7 +34,7 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
 
       <p>Exhibitors are also subject to the anti-harassment policy. In particular, exhibitors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing, or otherwise create a sexualised environment.</p>
 
-      <p>If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund. If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified by their red Bath Ruby t-shirts and "Volunteer" or "Organiser" badges.</p>
+      <p>If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund. If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately; you can identify them by their red Bath Ruby t-shirts and "Volunteer" or "Organiser" badges. Conference staff may also be contacted by phone (+44 1337 944 045) or email (<%= mail_to "bathruby@rockfieldsystems.com", "bathruby@rockfieldsystems.com" %>).</p>
 
       <p>Conference staff will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
 
