--- a/source/schedule.html.erb
+++ b/source/schedule.html.erb
@@ -7,13 +7,13 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
 
   <div class="wrapper">
 
-    <h1>Friday 13th March 2016</h1>
+    <h1>Friday 11th March 2016</h1>
 
     <ul class="schedule">
 
       <li>
         <div class="info">
-          <p class="time">08:30 - 09:30 <span class="duration">1 hr</span></p>
+          <p class="time">08:30 - 09:30</p>
         </div>
         <div class="detail">
           <p class="title">Registration</p>
@@ -22,196 +22,21 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
 
       <li>
         <div class="info">
-          <p class="time">09:30 - 09:40 <span class="duration">10 mins</span></p>
+          <p class="time">09:30 - 18:00</p>
         </div>
         <div class="detail">
-          <p class="title">Welcome</p>
-        </div>
-      </li>
-
-
-      <li class="talk">
-        <div class="info">
-          <p class="time">09:40 - 10:10 <span class="duration">30 mins</span></p>
-          <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
-          <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
-        </div>
-        <div class="detail">
-          <p class="title">Principles of Play</p>
-          <p class="speaker">Linda Lukas</p>
-          <p>If code is the colouring pens and lego blocks of our times - the tools of creation - how do we teach the curiosity, joy and wonder to our kids? I spent last summer looking at programming and play: how to create experiences that go deeper than just learning logic.</p>
-          <p>So, just like Alice, I swallowed the blue pill and fell down inside the machine.</p>
-        </div>
-      </li>
-
-
-      <li>
-        <div class="info">
-          <p class="time">10:10 - 10:30 <span class="duration">20 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Break</p>
-        </div>
-      </li>
-
-      <li class="talk">
-        <div class="info">
-          <p class="time">10:30 - 11:00 <span class="duration">30 mins</span></p>
-          <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
-          <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
-        </div>
-        <div class="detail">
-          <p class="title">Principles of Play</p>
-          <p class="speaker">Linda Lukas</p>
-          <p>If code is the colouring pens and lego blocks of our times - the tools of creation - how do we teach the curiosity, joy and wonder to our kids? I spent last summer looking at programming and play: how to create experiences that go deeper than just learning logic.</p>
-          <p>So, just like Alice, I swallowed the blue pill and fell down inside the machine.</p>
+          <p class="title">A full day of talks</p>
+          <p>Full schedule to be confirmed</p>
         </div>
       </li>
 
       <li>
         <div class="info">
-          <p class="time">11:00 - 11:15 <span class="duration">15 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Break</p>
-        </div>
-      </li>
-
-      <li class="talk">
-        <div class="info">
-          <p class="time">11:15 - 11:55 <span class="duration">40 mins</span></p>
-          <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
-          <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
-        </div>
-        <div class="detail">
-          <p class="title">Principles of Play</p>
-          <p class="speaker">Linda Lukas</p>
-          <p>If code is the colouring pens and lego blocks of our times - the tools of creation - how do we teach the curiosity, joy and wonder to our kids? I spent last summer looking at programming and play: how to create experiences that go deeper than just learning logic.</p>
-          <p>So, just like Alice, I swallowed the blue pill and fell down inside the machine.</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">11:55 - 12:15 <span class="duration">20 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Break</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">12:15 - 12:45 <span class="duration">30 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Lighting Talks</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">12:45 - 14:00 <span class="duration">1 hour 15 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Lunch</p>
-        </div>
-      </li>
-
-      <li class="talk">
-        <div class="info">
-          <p class="time">14:00 - 14:00 <span class="duration">30 mins</span></p>
-          <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
-          <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
-        </div>
-        <div class="detail">
-          <p class="title">Principles of Play</p>
-          <p class="speaker">Linda Lukas</p>
-          <p>If code is the colouring pens and lego blocks of our times - the tools of creation - how do we teach the curiosity, joy and wonder to our kids? I spent last summer looking at programming and play: how to create experiences that go deeper than just learning logic.</p>
-          <p>So, just like Alice, I swallowed the blue pill and fell down inside the machine.</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">12:30 - 14:45 <span class="duration">15 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Break</p>
-        </div>
-      </li>
-
-      <li class="talk">
-        <div class="info">
-          <p class="time">14:45 - 15:25 <span class="duration">40 mins</span></p>
-          <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
-          <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
-        </div>
-        <div class="detail">
-          <p class="title">Principles of Play</p>
-          <p class="speaker">Linda Lukas</p>
-          <p>If code is the colouring pens and lego blocks of our times - the tools of creation - how do we teach the curiosity, joy and wonder to our kids? I spent last summer looking at programming and play: how to create experiences that go deeper than just learning logic.</p>
-          <p>So, just like Alice, I swallowed the blue pill and fell down inside the machine.</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">15:25 - 15:45 <span class="duration">20 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Break</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">15:45 - 16:15 <span class="duration">30 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Lighting Talks</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">16:15 - 16:30<span class="duration">15 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Break</p>
-        </div>
-      </li>
-
-      <li class="talk">
-        <div class="info">
-          <p class="time">16:30 - 17:15 <span class="duration">45 mins</span></p>
-          <%= image_tag 'http://www.fillmurray.com/g/300/300', :class=> "speaker-image" %>
-          <%= link_to "@lindaliukas", 'http://twitter.com/lindaliukas', :class => "twitter" %>
-        </div>
-        <div class="detail">
-          <p class="title">Principles of Play</p>
-          <p class="speaker">Linda Lukas</p>
-          <p>If code is the colouring pens and lego blocks of our times - the tools of creation - how do we teach the curiosity, joy and wonder to our kids? I spent last summer looking at programming and play: how to create experiences that go deeper than just learning logic.</p>
-          <p>So, just like Alice, I swallowed the blue pill and fell down inside the machine.</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">17:15 - 17:30<span class="duration">15 mins</span></p>
-        </div>
-        <div class="detail">
-          <p class="title">Wrap Up</p>
-        </div>
-      </li>
-
-      <li>
-        <div class="info">
-          <p class="time">17:30 - 20:00<span class="duration">2 Hours 30 mins</span></p>
+          <p class="time">18:00 - 21:00</p>
         </div>
         <div class="detail">
           <p class="title">After Party</p>
-          <p>Stick around for a while to catch up with old friends and make some new ones over free drinks at the Assembly Rooms' bar, thanks to our brilliant sponsors!</p>
+          <p>Details coming soon!</p>
         </div>
       </li>
     </ul>
