Add specific links to index.html to keep CloudFront happy

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -12,7 +12,7 @@
     <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
     <div class="cta">
-      <%= link_to 'Sponsor Profiles', '/sponsors', :class => "btn outline alt" %>
+      <%= link_to 'Sponsor Profiles', '/sponsors/index.html', :class => "btn outline alt" %>
       <p>Interested in <%= link_to 'becoming a sponsor', 'https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf' %>?</p>
     </div>
 
