--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -52,9 +52,9 @@
           <nav class="main-nav">
             <ul>
               <li class="nav-home"><%= link_to 'Home', '/' %></li>
-              <li class="nav-schedule"><%= link_to 'Schedule', '/schedule' %></li>
-              <li class="nav-information"><%= link_to 'Information', '/information' %></li>
-              <li class="nav-sponsors"><%= link_to 'Sponsors', '/sponsors' %></li>
+              <li class="nav-schedule"><%= link_to 'Schedule', '/schedule/index.html' %></li>
+              <li class="nav-information"><%= link_to 'Information', '/information/index.html' %></li>
+              <li class="nav-sponsors"><%= link_to 'Sponsors', '/sponsors/index.html' %></li>
               <li class="nav-tickets"><%= link_to 'Tickets', '#tickets' %></li>
             </ul>
           </nav>
