--- a/source/_hero.html.erb
+++ b/source/_hero.html.erb
@@ -7,7 +7,7 @@
       <div class="hero-content">
         <p>Situated in the beautiful British city of Bath, this is a conference for Rubyists of all skill levels. Once again we're fortunate enough to be joined by a fantastic line up of speakers, giving both technical and non-technical talks on a range of subjects.</p>
 
-        <p>Thanks to the support of our wonderful <%= link_to "sponsors", '/sponsors.html' %> we can afford to keep ticket prices down and donate 10% of sales to <%= link_to "Save the Children", 'http://www.savethechildren.org/' %>, the world's leading independent organisation for children.</p>
+        <p>Thanks to the support of our wonderful <%= link_to "sponsors", '/sponsors/index.html' %> we can afford to keep ticket prices down and donate 10% of sales to <%= link_to "Save the Children", 'http://www.savethechildren.org/' %>, the world's leading independent organisation for children.</p>
       </div>
     </div>
     <a href="#speakers" class="scroll-arrow"></a>
