Add Rawnet copy to sponsors page

--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -20,7 +20,7 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
 
     <div class="media">
       <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
-      <p><strong>Rawnet</strong></p>
+      <p><strong>Rawnet</strong> Rawnet, voted Most Respected Agency in the UK by our peers, specialise in motivational & behavioural led digital engagement.  We help companies innovative and stay ahead of the game through beautifully designed and coded applications. Born out of a successful Internet business, the agency works on both digital products and engagement campaigns, taking every project on with commercials and results at the heart. We a 40 strong agency, we never outsource and have a 100% client retention rate. We’ve also been voted Number 1 Elite Digital Agency by The Drum and have collected over 20 awards for our fresh approach to digital in the past 2 years.</p>
     </div>
 
     <h2>Become a Sponsor</h2>
