--- a/source/_speakers.html.erb
+++ b/source/_speakers.html.erb
@@ -7,37 +7,37 @@
   <div class="wrapper speakers scrollme">
     <ul class="speaker-list">
       <li>
-        <%= image_tag 'speakers/janet-crawford.jpg', :class=> "speaker-image", :alt => "Bill Murray" %>
+        <%= image_tag 'speakers/janet-crawford.jpg', :class=> "speaker-image", :alt => "Janet Crawford" %>
         <h3>Janet Crawford</h3>
         <%= link_to "@janetcrawford", 'http://twitter.com/janetcrawford', :class => "twitter" %>
         <p>Scientist, <a href="http://www.cascadance.com">designer of culture</a>, speaker, coach.</p>
       </li>
       <li>
-        <%= image_tag 'speakers/coraline-ada-ehmke.jpg', :class=> "speaker-image", :alt => "Bill Murray" %>
+        <%= image_tag 'speakers/coraline-ada-ehmke.jpg', :class=> "speaker-image", :alt => "Coraline Ada Ehmke" %>
         <h3>Coraline Ada Ehmke</h3>
         <%= link_to "@CoralineAda", 'http://twitter.com/CoralineAda', :class => "twitter" %>
         <p>Creator of the <a href="http://contributor-covenant.org">Contributor Covenant</a>, founder of <a href="http://www.os4w.org/">OS4W</a>, <a href="https://devchat.tv/ruby-rogues/">Ruby Rogues</a> panelist.</p>
       </li>
       <li>
-        <%= image_tag 'speakers/courteney-ervin.jpg', :class=> "speaker-image", :alt => "Bill Murray" %>
+        <%= image_tag 'speakers/courteney-ervin.jpg', :class=> "speaker-image", :alt => "Courteney Ervin" %>
         <h3>Courteney Ervin</h3>
         <%= link_to "@courteneyervin", 'http://twitter.com/courteneyervin', :class => "twitter" %>
         <p>Teacher, mentor, Open Source champion.</p>
       </li>
       <li>
-        <%= image_tag 'speakers/zach-holman.jpg', :class=> "speaker-image", :alt => "Bill Murray" %>
+        <%= image_tag 'speakers/zach-holman.jpg', :class=> "speaker-image", :alt => "Zach Holman" %>
         <h3>Zach Holman</h3>
         <%= link_to "@holman", 'http://twitter.com/holman', :class => "twitter" %>
         <p>Former door-to-door git repository salesman at large.</p>
       </li>
       <li>
-        <%= image_tag 'speakers/aaron-patterson.jpg', :class=> "speaker-image", :alt => "Bill Murray" %>
+        <%= image_tag 'speakers/aaron-patterson.jpg', :class=> "speaker-image", :alt => "Aaron Patterson" %>
         <h3>Aaron Patterson</h3>
         <%= link_to "@tenderlove", 'http://twitter.com/tenderlove', :class => "twitter" %>
         <p><a href="http://rubyonrails.org/core/">Rails core</a> team member, thought leader, <a href="http://rubyheroes.com/">Ruby Hero</a>.</p>
       </li>
       <li>
-        <%= image_tag 'speakers/xavier-riley.jpg', :class=> "speaker-image", :alt => "Bill Murray" %>
+        <%= image_tag 'speakers/xavier-riley.jpg', :class=> "speaker-image", :alt => "Xavier Riley" %>
         <h3>Xavier Riley</h3>
         <%= link_to "@xavriley", 'http://twitter.com/xavriley', :class => "twitter" %>
         <p><a href="http://sonic-pi.net/">Sonic Pi</a> core team member, musician, <a href="https://www.heroku.com">Herokai</a>.</p>
@@ -52,7 +52,4 @@
     </div>
   </div>
 
-
-
-  
 </section>
