Fix a typo and stop the map from being draggable on mobile

--- a/source/information.html.erb
+++ b/source/information.html.erb
@@ -206,6 +206,7 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
       scrollwheel: false,
       mapTypeControl: false,
       streetViewControl: false,
+      draggable: false
     });
 
     var image = {
@@ -223,7 +224,7 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
       icon: image
     });
 
-    var contentString = '<div id="content"><p>The Asemaby Rooms,<br />Bennett St,<br /> Bath,<br />BA1 2QH</p></div>';
+    var contentString = '<div id="content"><p>The Assembly Rooms,<br />Bennett St,<br />Bath,<br />BA1 2QH</p></div>';
 
     var infowindow = new google.maps.InfoWindow({
       content: contentString
