First batch of tickets is sold out

--- a/source/_tickets.html.erb
+++ b/source/_tickets.html.erb
@@ -7,9 +7,11 @@
 
       <div class="release">
         <h2>First Release</h2>
-        <p class="cost">
-          Regular
-          <span>&pound;59</span>
+        <p class="cost" title="Sold Out">
+          <del>
+            Regular
+            <span>&pound;59</span>
+          </del>
         </p>
         <p class="cost">
           Student
