--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BathRuby">
-    <meta name="twitter:url" content="http://2016.bathruby.org/">
+    <meta name="twitter:url" content="http://2016.bathruby.uk/">
     <meta name="twitter:creator" content="@BathRuby">
     <meta name="twitter:title" content="Bath Ruby">
     <meta name="twitter:description" content="<%= current_page.data.description %>">
@@ -75,9 +75,8 @@
       </footer>
 
     </div>
-    
+
     <%= javascript_include_tag 'application' %>
-  
 
   </body>
 
