Updated description, optermised new images

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-description: "Bath Ruby is a one day, single track conference in the beautiful British city of Bath, organised by Simon Starr with help from Andrew Nesbitt and Jordan Elver."
+description: "Situated in the beautiful British city of Bath, Bath Ruby is a conference for Rubyists of all skill levels."
 ---
 
 <%= partial "hero" %>
