--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -1,6 +1,6 @@
 ---
 page_classes: "sponsors"
-description: "Bath Ruby is a one day, single track conference in the beautiful British city of Bath, organised by Simon Starr with help from Andrew Nesbitt and Jordan Elver."
+description: "Situated in the beautiful British city of Bath, Bath Ruby is a conference for Rubyists of all skill levels."
 ---
 
 <div class="main-content">
