--- a/source/schedule.html.erb
+++ b/source/schedule.html.erb
@@ -1,6 +1,6 @@
 ---
 page_classes: "schedule"
-description: "Bath Ruby is a one day, single track conference in the beautiful British city of Bath, organised by Simon Starr with help from Andrew Nesbitt and Jordan Elver."
+description: "Situated in the beautiful British city of Bath, Bath Ruby is a conference for Rubyists of all skill levels."
 ---
 
 <div class="main-content">
@@ -44,10 +44,6 @@ description: "Bath Ruby is a one day, single track conference in the beautiful B
   </div>
     
 </div>
-
-<%= partial "tickets" %>
-
-<%= partial "sponsors" %>
 
 <%= partial "tickets" %>
 
