--- a/source/_last-year.html.erb
+++ b/source/_last-year.html.erb
@@ -2,6 +2,6 @@
   <div class="wrapper">
     <h2>Last Year</h2>
     <p>In 2015 Bath welcomed 500 developers from all over the world</p>
-    <%= link_to "Play Video", "https://youtu.be/Em49QAJF-7Q" %>
+    <%= link_to "Play Video", "https://youtu.be/Em49QAJF-7Q", :id => "video" %>
   </div>
 </section>
