Add Sky's logo and copy

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -2,6 +2,9 @@
   <div class="wrapper">
     <h1>Sponsors</h1>
 
+    <h2>Ruby Sponsor</h2>
+    <%= link_to image_tag("sponsors/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+
     <h2>Venue Sponsor</h2>
     <%= link_to image_tag("sponsors/banes.png", width: 300, height: 150, alt: "Bath & North East Somerset Council"), "http://bathnes.gov.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
