--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -9,6 +9,15 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
     <h1>Sponsors</h1>
 
+    <h2>Ruby</h2>
+
+    <div class="media">
+      <%= link_to image_tag("sponsors/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Sky</strong> Sky@LeedsDock are building a team that will be able to take on any challenge; we’re stepping up our commitment to digital skills and innovation with the creation of a brand new, world-class technology hub in Leeds. Our new tech hub will see the creation of up to 400 highly-skilled jobs and is already partially open. Its focus is on designing and developing our next generation of websites and apps across the product offering. Teams will also work on some of our most popular digital and online platforms within Sky Sports, Sky News, Online Service and Digital Trading.
+      <br />
+      Based at Allied London’s Leeds Dock, in the heart of the city, the hub is already a dynamic and creative environment for our tech teams, expanding their skills in order to continue to grow our technology for customers.</p>
+    </div>
+
     <h2>Gold</h2>
 
     <div class="media">
