Add Pusher to the website

--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -25,6 +25,13 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>Bytemark Hosting</strong> Bytemark is the UK's smartest hosting company for builders and self-starters, established in 2002. It has its own data centre in York, another in Manchester, and its own cloud hosting platform called BigV (70,000 lines of Ruby). BigV lets developers scale to servers of up to 180GB of RAM, and to mix in dedicated servers for the most flexible hosting network. Bytemark can also take on active management of applications and clients, including all the fiddly stuff like backups, health monitoring and 24-hour response. Bytemark love Ruby, and are always interested in meeting programmers looking for a new challenge.</p>
     </div>
 
+    <h2>Silver</h2>
+
+    <div class="media">
+      <%= link_to image_tag("sponsors/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Pusher</strong> Create interactive, realtime apps in minutes with your technology stack of choice by using Pusher's hosted API. Pusher is perfect for realtime notifications, activity streams, data visualizations, collaborative apps and much more. It’s secure, it scales from one to millions of connections instantly and you won’t need to set up or maintain your own realtime infrastructure.</p>
+    </div>
+
     <h2>Bronze</h2>
 
     <div class="media">
