Add images to the FB and Twitter meta tags

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,19 +13,19 @@
     <!-- Social Meta Tags -->
     <meta property="og:title" content="Bath Ruby Conference - 11th March 2016">
     <meta property="og:site_name" content="Bath Ruby">
-    <meta property="og:url" content="http://2016.bathruby.org/">
+    <meta property="og:url" content="http://2016.bathruby.uk/">
     <meta property="og:description" content="<%= current_page.data.description %>">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_GB"/>
-    <!-- <meta property="og:image" content="#"/> -->
+    <meta property="og:image" content="<%= image_tag('logo-red.png', "width" => "1200", :height => "360") %>"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BathRuby">
     <meta name="twitter:url" content="http://2016.bathruby.uk/">
     <meta name="twitter:creator" content="@BathRuby">
-    <meta name="twitter:title" content="Bath Ruby">
+    <meta name="twitter:title" content="Bath Ruby Conference - 11th March 2016">
     <meta name="twitter:description" content="<%= current_page.data.description %>">
-    <!-- <meta name="twitter:image:src" content="#"> -->
+    <meta name="twitter:image:src" content="<%= image_tag('logo-red.png', "width" => "1200", :height => "360") %>">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-icon-57x57.png">
