--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
     <meta property="og:description" content="<%= current_page.data.description %>">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_GB"/>
-    <meta property="og:image" content="<%= "http://2016.bathruby.uk/" + image_path('logo-red.png') %>"/>
+    <meta property="og:image" content="<%= "http://2016.bathruby.uk/" + image_path('logo-social-banner.jpg') %>"/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BathRuby">
@@ -25,7 +25,7 @@
     <meta name="twitter:creator" content="@BathRuby">
     <meta name="twitter:title" content="Bath Ruby Conference - 11th March 2016">
     <meta name="twitter:description" content="<%= current_page.data.description %>">
-    <meta name="twitter:image:src" content="<%= "http://2016.bathruby.uk/" + image_path('logo-red.png') %>">
+    <meta name="twitter:image:src" content="<%= "http://2016.bathruby.uk/" + image_path('logo-social-banner.jpg') %>">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-icon-57x57.png">
