--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,13 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Social Meta Tags -->
-    <meta property="og:title" content="Bath Ruby Conference - 11th March 2016">
-    <meta property="og:site_name" content="Bath Ruby">
-    <meta property="og:url" content="http://2016.bathruby.uk/">
-    <meta property="og:description" content="<%= current_page.data.description %>">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="en_GB"/>
-    <meta property="og:image" content="<%= "http://2016.bathruby.uk/" + image_path('logo-social-banner.jpg') %>"/>
+    <meta property="og:title" content="Bath Ruby Conference - 11th March 2016" />
+    <meta property="og:site_name" content="Bath Ruby" />
+    <meta property="og:url" content="http://2016.bathruby.uk/" />
+    <meta property="og:description" content="<%= current_page.data.description %>" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:image" content="<%= "http://2016.bathruby.uk/" + image_path('bathruby-social-banner.png') %>" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BathRuby">
@@ -25,7 +27,7 @@
     <meta name="twitter:creator" content="@BathRuby">
     <meta name="twitter:title" content="Bath Ruby Conference - 11th March 2016">
     <meta name="twitter:description" content="<%= current_page.data.description %>">
-    <meta name="twitter:image:src" content="<%= "http://2016.bathruby.uk/" + image_path('logo-social-banner.jpg') %>">
+    <meta name="twitter:image:src" content="<%= "http://2016.bathruby.uk/" + image_path('bathruby-social-banner.png') %>">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-icon-57x57.png">
