--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -32,6 +32,16 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>Pusher</strong> Create interactive, realtime apps in minutes with your technology stack of choice by using Pusher's hosted API. Pusher is perfect for realtime notifications, activity streams, data visualizations, collaborative apps and much more. It’s secure, it scales from one to millions of connections instantly and you won’t need to set up or maintain your own realtime infrastructure.</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("sponsors/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Alliants</strong> 6 years ago we were one developer, and now we are 38 with offices in Southampton, London and Toronto. We get excited by solving problems (sometimes with code / sometimes not). Our approach has meant we’ve been able to worked with start ups and global companies across a range of industries. We are excited to find our next challenge and the people who can help us solve them. Whilst has a lot has changed since the beginning somethings have remained constant, Great Coffee, Great Code and our love of Bacon and Beer.</p>
+    </div>
+
+    <div class="media">
+      <%= link_to image_tag("sponsors/cookieshq.png", width: 300, height: 150, alt: "CookiesHQ"), "http://cookieshq.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>CookiesHQ</strong> CookiesHQ is a small but perfectly formed Ruby on Rails development agency based in Bristol. Our team of problem solvers create, maintain and improve web applications for startups, agencies and tech teams in the South West and beyond. We are experienced, honest and pragmatic, always aiming to find, not only the right solution, but the solution that will make a difference to your project and allow you to take your business to the next level. Our lovely clients have praised our technical knowledge, strong communication process and overall efficiency… and we sometimes bake cookies for them!</p>
+    </div>
+
     <h2>Bronze</h2>
 
     <div class="media">
