--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -34,7 +34,7 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
     <div class="media">
       <%= link_to image_tag("sponsors/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
-      <p><strong>Alliants</strong> 6 years ago we were one developer, and now we are 38 with offices in Southampton, London and Toronto. We get excited by solving problems (sometimes with code / sometimes not). Our approach has meant we’ve been able to worked with start ups and global companies across a range of industries. We are excited to find our next challenge and the people who can help us solve them. Whilst has a lot has changed since the beginning somethings have remained constant, Great Coffee, Great Code and our love of Bacon and Beer.</p>
+      <p><strong>Alliants</strong> 6 years ago we were one developer, and now we are 38 with offices in Southampton, London and Toronto. We get excited by solving problems (sometimes with code / sometimes not). Our approach has meant we’ve been able to worked with start ups and global companies across a range of industries. We are excited to find our next challenge and the people who can help us solve them. Whilst a lot has changed since the beginning somethings have remained constant, Great Coffee, Great Code and our love of Bacon and Beer.</p>
     </div>
 
     <div class="media">
