Update ticket availability

--- a/source/_tickets.html.erb
+++ b/source/_tickets.html.erb
@@ -7,21 +7,16 @@
 
       <div class="release not-on-sale">
         <h2>First Release</h2>
-        <p class="cost" title="Sold Out">
-          Regular
-          <span>&pound;59</span>
-        </p>
-        <p class="cost">
-          Student
-          <span>&pound;19</span>
-        </p>
+        <p class="sold-out-cost">Sold Out</p>
       </div>
 
       <div class="release">
         <h2>Second Release</h2>
         <p class="cost">
-          Regular
-          <span>&pound;79</span>
+          <del>
+            Regular
+            <span>&pound;79</span>
+          </del>
         </p>
         <p class="cost">
           Student
