Change the copyright notice

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -91,7 +91,7 @@
           <%= link_to image_tag('save-the-children.png', "width" => "304", :height => "62",  :alt => "Save the Children"), 'http://www.savethechildren.org/', :class => "charity-logo" %>
           <p class="charity-info">Registered Charity No. 213890 (England & Wales) and SC039570 (Scotland)</p>
           <%= link_to '@bathruby', 'https://twitter.com/bathruby', :class => "twitter-link" %>
-          <p class="copy">Copyright &copy; Bath Ruby 2016 All Rights Reserved</p>
+          <p class="copy">Copyright &copy; Rockfield Systems 2016 All Rights Reserved</p>
         </div>
       </footer>
 
