Put the third batch of tickets on sale

--- a/source/_tickets.html.erb
+++ b/source/_tickets.html.erb
@@ -10,22 +10,12 @@
         <p class="sold-out-cost">Sold Out</p>
       </div>
 
-      <div class="release">
+      <div class="release not-on-sale">
         <h2>Second Release</h2>
-        <p class="cost">
-          <del>
-            Regular
-            <span>&pound;79</span>
-          </del>
-        </p>
-        <p class="cost">
-          Student
-          <span>&pound;19</span>
-        </p>
-        <%= link_to 'Buy Now', 'https://ti.to/bath-ruby/2016', :class => "btn" %>
+        <p class="sold-out-cost">Sold Out</p>
       </div>
 
-      <div class="release not-on-sale">
+      <div class="release">
         <h2>Third Release</h2>
         <p class="cost">
           Regular
@@ -35,6 +25,7 @@
           Student
           <span>&pound;19</span>
         </p>
+        <%= link_to 'Buy Now', 'https://ti.to/bath-ruby/2016', :class => "btn" %>
       </div>
       
     </div>
