Add Bugsnag to the sponsors

--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -42,6 +42,11 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>CookiesHQ</strong> CookiesHQ is a small but perfectly formed Ruby on Rails development agency based in Bristol. Our team of problem solvers create, maintain and improve web applications for startups, agencies and tech teams in the South West and beyond. We are experienced, honest and pragmatic, always aiming to find, not only the right solution, but the solution that will make a difference to your project and allow you to take your business to the next level. Our lovely clients have praised our technical knowledge, strong communication process and overall efficiency… and we sometimes bake cookies for them!</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "https://bugsnag.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Bugsnag</strong> Bugsnag gives Ruby developers the tools and workflow they need to spend more time shipping and less time fixing. We help you take a proactive approach to software quality, translating exceptions and errors into action. With Bugsnag, Ruby developers are free to innovate and build applications that can evolve with the pace of modern business.</p>
+    </div>
+
     <h2>Bronze</h2>
 
     <div class="media">
