--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -18,6 +18,8 @@
 
     <%= link_to image_tag("sponsors/cookieshq.png", width: 300, height: 150, alt: "CookiesHQ"), "http://cookieshq.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
+    <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "https://bugsnag.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+
     <h2>Bronze Sponsors</h2>
     <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
