Update Bugsnag link

--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -43,7 +43,7 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
     </div>
 
     <div class="media">
-      <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "https://bugsnag.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "http://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
       <p><strong>Bugsnag</strong> Bugsnag gives Ruby developers the tools and workflow they need to spend more time shipping and less time fixing. We help you take a proactive approach to software quality, translating exceptions and errors into action. With Bugsnag, Ruby developers are free to innovate and build applications that can evolve with the pace of modern business.</p>
     </div>
 
