Add uSwitch to the sponsors

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -11,6 +11,8 @@
     <h2>Gold Sponsors</h2>
     <%= link_to image_tag("sponsors/bytemark.png", width: 300, height: 150, alt: "Bytemark Hosting"), "https://www.bytemark.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
+    <%= link_to image_tag("sponsors/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+
     <h2>Silver Sponsors</h2>
     <%= link_to image_tag("sponsors/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
