--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -13,9 +13,9 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
     <div class="media">
       <%= link_to image_tag("sponsors/sky.jpg", width: 300, height: 150, alt: "Sky"), "http://www.workforsky.com/find-job/technology-and-product-development/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
-      <p><strong>Sky</strong> Sky@LeedsDock are building a team that will be able to take on any challenge; we’re stepping up our commitment to digital skills and innovation with the creation of a brand new, world-class technology hub in Leeds. Our new tech hub will see the creation of up to 400 highly-skilled jobs and is already partially open. Its focus is on designing and developing our next generation of websites and apps across the product offering. Teams will also work on some of our most popular digital and online platforms within Sky Sports, Sky News, Online Service and Digital Trading.
+      <p><strong>Sky</strong> Sky@LeedsDock are building a team that will be able to take on any challenge; we're stepping up our commitment to digital skills and innovation with the creation of a brand new, world-class technology hub in Leeds. Our new tech hub will see the creation of up to 400 highly-skilled jobs and is already partially open. Its focus is on designing and developing our next generation of websites and apps across the product offering. Teams will also work on some of our most popular digital and online platforms within Sky Sports, Sky News, Online Service and Digital Trading.
       <br />
-      Based at Allied London’s Leeds Dock, in the heart of the city, the hub is already a dynamic and creative environment for our tech teams, expanding their skills in order to continue to grow our technology for customers.</p>
+      Based at Allied London's Leeds Dock, in the heart of the city, the hub is already a dynamic and creative environment for our tech teams, expanding their skills in order to continue to grow our technology for customers.</p>
     </div>
 
     <h2>Gold</h2>
@@ -25,16 +25,23 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>Bytemark Hosting</strong> Bytemark is the UK's smartest hosting company for builders and self-starters, established in 2002. It has its own data centre in York, another in Manchester, and its own cloud hosting platform called BigV (70,000 lines of Ruby). BigV lets developers scale to servers of up to 180GB of RAM, and to mix in dedicated servers for the most flexible hosting network. Bytemark can also take on active management of applications and clients, including all the fiddly stuff like backups, health monitoring and 24-hour response. Bytemark love Ruby, and are always interested in meeting programmers looking for a new challenge.</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("sponsors/uswitch.png", width: 300, height: 150, alt: "uSwitch"), "http://www.uswitch.com/vacancies/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>uSwitch</strong> Here at uSwitch we empower intelligent people to make intelligent decisions. We give them the autonomy to experiment and the flexibility to develop ways to provide our customers a simple and personal service. We give people problems to solve and the autonomy to implement using appropriate technologies, this is why we like our developers to experiment with coding. We encourage a continuous delivery of value; We don't do 6 month "projects". We prefer to break problems down into manageable chunks and deliver early and often.
+      <br />
+      So in a nutshell we're just what you're looking for if you want to develop yourself and make a difference. We seek &amp; attract people who embrace continuous learning. We value talent and commitment to master and push the boundaries of your discipline.</p>
+    </div>
+
     <h2>Silver</h2>
 
     <div class="media">
       <%= link_to image_tag("sponsors/pusher.png", width: 300, height: 150, alt: "Pusher"), "https://pusher.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
-      <p><strong>Pusher</strong> Create interactive, realtime apps in minutes with your technology stack of choice by using Pusher's hosted API. Pusher is perfect for realtime notifications, activity streams, data visualizations, collaborative apps and much more. It’s secure, it scales from one to millions of connections instantly and you won’t need to set up or maintain your own realtime infrastructure.</p>
+      <p><strong>Pusher</strong> Create interactive, realtime apps in minutes with your technology stack of choice by using Pusher's hosted API. Pusher is perfect for realtime notifications, activity streams, data visualizations, collaborative apps and much more. It's secure, it scales from one to millions of connections instantly and you won't need to set up or maintain your own realtime infrastructure.</p>
     </div>
 
     <div class="media">
       <%= link_to image_tag("sponsors/alliants.png", width: 300, height: 150, alt: "Alliants"), "http://www.alliants.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
-      <p><strong>Alliants</strong> 6 years ago we were one developer, and now we are 38 with offices in Southampton, London and Toronto. We get excited by solving problems (sometimes with code / sometimes not). Our approach has meant we’ve been able to worked with start ups and global companies across a range of industries. We are excited to find our next challenge and the people who can help us solve them. Whilst a lot has changed since the beginning somethings have remained constant, Great Coffee, Great Code and our love of Bacon and Beer.</p>
+      <p><strong>Alliants</strong> 6 years ago we were one developer, and now we are 38 with offices in Southampton, London and Toronto. We get excited by solving problems (sometimes with code / sometimes not). Our approach has meant we've been able to worked with start ups and global companies across a range of industries. We are excited to find our next challenge and the people who can help us solve them. Whilst a lot has changed since the beginning somethings have remained constant, Great Coffee, Great Code and our love of Bacon and Beer.</p>
     </div>
 
     <div class="media">
@@ -51,7 +58,7 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
 
     <div class="media">
       <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
-      <p><strong>Rawnet</strong> Voted Most Respected Agency in the UK by our peers, Rawnet specialise in motivational &amp; behavioural led digital engagement. We help companies innovative and stay ahead of the game through beautifully designed and coded applications. Born out of a successful Internet business, the agency works on both digital products and engagement campaigns, taking every project on with commercials and results at the heart. We are a 40 strong agency, we never outsource and have a 100% client retention rate. We’ve also been voted Number 1 Elite Digital Agency by The Drum and have collected over 20 awards for our fresh approach to digital in the past 2 years.</p>
+      <p><strong>Rawnet</strong> Voted Most Respected Agency in the UK by our peers, Rawnet specialise in motivational &amp; behavioural led digital engagement. We help companies innovative and stay ahead of the game through beautifully designed and coded applications. Born out of a successful Internet business, the agency works on both digital products and engagement campaigns, taking every project on with commercials and results at the heart. We are a 40 strong agency, we never outsource and have a 100% client retention rate. We've also been voted Number 1 Elite Digital Agency by The Drum and have collected over 20 awards for our fresh approach to digital in the past 2 years.</p>
     </div>
 
     <h2>Become a Sponsor</h2>
