Add some more margin to the sides of sponsor logos

--- a/source/stylesheets/pages/_sponsors.scss
+++ b/source/stylesheets/pages/_sponsors.scss
@@ -39,7 +39,7 @@ body.sponsors{
   }
   .sponsor-logo{
     display: inline-block;
-    margin: 0 0 40px 0;
+    margin: 0 10px 40px 10px;
   }
 
   .btn.outline{
