Add Novate to the sponsors

--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -25,6 +25,8 @@
     <h2>Bronze Sponsors</h2>
     <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
+    <%= link_to image_tag("sponsors/novate.jpg", width: 300, height: 150, alt: "Novate IT"), "http://www.novate-it.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+
     <div class="cta">
       <%= link_to 'Sponsor Profiles', '/sponsors/index.html', :class => "btn outline alt" %>
       <p>Interested in <%= link_to 'becoming a sponsor', 'https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf' %>?</p>
