--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -61,6 +61,11 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>Rawnet</strong> Voted Most Respected Agency in the UK by our peers, Rawnet specialise in motivational &amp; behavioural led digital engagement. We help companies innovative and stay ahead of the game through beautifully designed and coded applications. Born out of a successful Internet business, the agency works on both digital products and engagement campaigns, taking every project on with commercials and results at the heart. We are a 40 strong agency, we never outsource and have a 100% client retention rate. We've also been voted Number 1 Elite Digital Agency by The Drum and have collected over 20 awards for our fresh approach to digital in the past 2 years.</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("sponsors/novate.jpg", width: 300, height: 150, alt: "Novate IT"), "http://www.novate-it.co.uk/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
+      <p><strong>Novate IT</strong> Now in their 12th year, Novate IT is a recruitment company unlike any you will have experienced before; there's no hard-sell, nor is there a deluge of unsuitable vacancies or candidates. Working as a true "consultancy" rather than just an "agency", Novate IT partner with their clients to fully understand their business, they then only send small numbers of carefully selected applicants who all meet the role's requirements. If you're looking for a recruitment partner who takes time to understand your needs and strives to be a cut above the rest they could be just what you're looking for. Novate IT work with Ruby employers and applicants across the UK and Germany and are always interested in speaking with new companies and candidates.</p>
+    </div>
+
     <h2>Become a Sponsor</h2>
     <p class="download">Download our <%= link_to "sponsorship prospectus" , "https://dl.dropboxusercontent.com/u/599955/Bath%20Ruby%20Sponsorship%20Prospectus%202016.pdf" %>.</p>
 
