Add FreeAgent to the sponsors

--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -54,6 +54,16 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
       <p><strong>Bugsnag</strong> Bugsnag gives Ruby developers the tools and workflow they need to spend more time shipping and less time fixing. We help you take a proactive approach to software quality, translating exceptions and errors into action. With Bugsnag, Ruby developers are free to innovate and build applications that can evolve with the pace of modern business.</p>
     </div>
 
+    <div class="media">
+      <%= link_to image_tag("sponsors/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+      <p><strong>FreeAgent</strong> FreeAgent is a multi-award winning online accounting system specifically designed to meet the needs of micro-businesses and freelancers.
+      <br />
+      We help you take care of your business admin day-to-day – from managing your expenses, running a fully RTI-compliant payroll and tracking
+      your time through to creating and sending professional-looking estimates and invoices to your clients. We also help you keep track of your cash-flow, see how much tax you owe and when it’s due and file VAT, RTI and Self Assessment returns directly to HMRC.  
+      <br />
+      More than 40,000 customers worldwide currently use FreeAgent to manage their business accounts – all done simply without confusing accounting jargon and with a friendly support team to help them stay on track. Try it for free at <a href="http://www.freeagent.com/?utm_source=conference_website&utm_medium=text&utm_campaign=bathruby2016">www.freeagent.com</a></p>
+    </div>
+
     <h2>Bronze</h2>
 
     <div class="media">
