--- a/source/_sponsors.html.erb
+++ b/source/_sponsors.html.erb
@@ -22,6 +22,8 @@
 
     <%= link_to image_tag("sponsors/bugsnag.png", width: 300, height: 150, alt: "Bugsnag"), "http://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
 
+    <%= link_to image_tag("sponsors/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+
     <h2>Bronze Sponsors</h2>
     <%= link_to image_tag("sponsors/rawnet.png", width: 300, height: 150, alt: "Rawnet"), "http://www.rawnet.com/?utm_source=bath_ruby&utm_medium=banner&utm_campaign=bath_ruby_conference", :class => "sponsor-logo" %>
 
