--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -55,6 +55,11 @@ description: "Situated in the beautiful British city of Bath, Bath Ruby is a con
     </div>
 
     <div class="media">
+      <%= link_to image_tag("sponsors/bristol-and-bath.png", width: 300, height: 150, alt: "Bristol & Bath"), "https://www.bristolandbath.co.uk/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
+      <p><strong>Bristol &amp; Bath</strong> How far could your business go if nothing was holding you back? In Bristol &amp; Bath you will find a talent pool fed by four of the UK's top universities. A network of pioneering companies like Airbus, HP Labs, Aardman and Intel. And an airport ready to transport you to hundreds of major cities around the world. How far could your business go? Come to Bristol &amp; Bath and find out.</p>
+    </div>
+
+    <div class="media">
       <%= link_to image_tag("sponsors/freeagent.png", width: 300, height: 150, alt: "FreeAgent"), "http://www.freeagent.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=bathruby2016", :class => "sponsor-logo" %>
       <p><strong>FreeAgent</strong> FreeAgent is a multi-award winning online accounting system specifically designed to meet the needs of micro-businesses and freelancers.
       <br />
